# tuner-dsp

./: .gitignore  README.md  index.ts  package-lock.json  package.json  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties  setting.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/mytuner/: NativeTunerSpec.java
android/src/main/java/com/mytuner/jni/: CMakeLists.txt  TunerEngine-generated.cpp  TunerEngine.h
android/src/main/java/com/mytuner/jni/react/renderer/components/TunerEngine/: TunerEngineJSI.h
android/src/main/java/com/mytuner/specs/: NativeTunerModule.java  NativeTunerSpec.java  TunerPackage.java
android/src/main/java/com/tunerdsp/: AudioFrameCallback.java  MicrophoneManager.java  TunerDspModule.java  TunerDspModulePackage.java  TunerJniEngine.java  TunerModule.java  TunerModulePackage.java
hooks/: configs.ts  constants.ts  index.ts  types.ts  useTuner.ts
hooks/audio/: index.ts  permissions.ts  useAudio.ts
hooks/tuner/: TunerProcessor.ts  index.ts  useTunerResults.ts  utils.ts
ios/: mytuner.podspec
shared/: NativeModule.cpp  NativeModule.h  NativeModule.hpp  NativeModule_JNI.cpp  NativeTunerDsp.cpp  NativeTunerDsp.h  TunerJNI.cpp  types.h
shared/include/: NativeTunerDsp.h  pitch_detector.hpp  tuner_engine.h  types.hpp
shared/src/: NativeTunerDsp.cpp  TunerJNI.cpp  pitch_detector.cpp  tuner_engine.cpp
shared/tuner/: tuner_engine.cpp  tuner_engine.h
shared/tuner/dsp/: dc_filter.h  (+3 more)
specs/: NativeTuner.ts  NativeTunerDsp.ts  TunerEngine.ts  constants.ts  index.ts  types.ts
(+6 files in other folders)
